--- a/Common/字符编码.md
+++ b/Common/字符编码.md
@@ -1,11 +1,11 @@
 # 什么是字符集
 &emsp;&emsp;在介绍字符集之前，我们先了解下为什么要有字符集。我们在计算机屏幕上看到的是实体化的文字，而在计算机存储介质中存放的实际是二进制的比特流。那么
-在这两者之间的转换规则就需要一个统一的标准，否则把我们的U盘插到老板的电脑上，文档就乱码了；小伙伴QQ上传过来的文件，在我们本地打开又乱码了。于是为了实现转
+在这两者之间的转换规则就需要一个统一的标准，否则别人传过来的文件，在我们本地打开就乱码了。于是为了实现转
 换标准，各种字符集标准就出现了。简单的说字符集就规定了某个文字对应的二进制数字存放方式（编码）和某串二进制数值代表了哪个文字（解码）的转换关系。
 
 &emsp;&emsp;那么为什么会有那么多字符集标准呢？这个问题实际非常容易回答。问问自己为什么我们的插头拿到英国就不能用了呢？为什么显示器同时有DVI，VGA，HDMI，DP这么多接口呢？很多规范和标准在最初制定时并不会意识到这将会是以后全球普适的准则，或者处于组织本身利益就想从本质上区别于现有标准。于是，就产生了那么多具有相同效果但又不相互兼容的标准了。
 
-说了那么多我们来看一个实际例子，下面就是屌这个字在各种编码下的十六进制和二进制编码结果，怎么样有没有一种很屌的感觉？  
+看一个实际例子，下面就是屌这个字在各种编码下的十六进制和二进制编码结果
 
 | 字符集 | 16进制编码 | 对应的二进制数据 | 
 | - | :-: | -: | 
@@ -58,14 +58,13 @@ UTF-8编码为变长编码。最小编码单位（code unit）为一个字节。
 | ¢ | 00A2 | 	000 1010 0010 | 1100 0010 1010 0010 | C2 A2 |
 | € | 20AC | 0010 0000 1010 1100 | 1110 0010 1000 0010 1010 1100 | E2 82 AC |
 
-细心的读者不难从以上的简单介绍中得出以下规律：
+不难从以上的简单介绍中得出以下规律：
 
 * 3个字节的UTF-8十六进制编码一定是以E开头的
 * 2个字节的UTF-8十六进制编码一定是以C或D开头的
 * 1个字节的UTF-8十六进制编码一定是以比8小的数字开头的
 
 # 为什么会出现乱码
-先科普下乱码的英文native说法是mojibake
 
 简单的说乱码的出现是因为：编码和解码时用了不同或者不兼容的字符集。对应到真实生活中，就好比是一个英国人为了表示祝福在纸上写了bless（编码过程）。而一个
 法国人拿到了这张纸，由于在法语中bless表示受伤的意思，所以认为他想表达的是受伤（解码过程）。这个就是一个现实生活中的乱码情况。在计算机科学中一样，一个用UTF-8编码后的字符，用GBK去解码。由于两个字符集的字库表不一样，同一个汉字在两个字符表的位置也不同，最终就会出现乱码。
