--- a/Java/注解基础.md
+++ b/Java/注解基础.md
@@ -2,7 +2,7 @@
 注解是一种元数据形式，提供有关不属于程序本身的程序的数据
 注解在编译后，实际是继承了`java.lang.annotation.Annotation`接口的接口
 ## 2.注解的元素（属性）
-&emsp;&emsp;注解没有方法，只有元素（也可以没有元素），但是它的元素是用无形参方法来声明，方法名就是元素的名字，返回值就是元素的类型。
+&emsp;&emsp;注解没有方法，只有元素（也可以没有元素），但是它的元素是用无形参方法来声明，方法名就是元素的名字，返回值就是元素的类型。（注解中仍然可以定义字段）
 ```
 //不指定@Target则可以用于任何元素上
 //不指定@Retention，则默认CLASS
