按键事件焦点笔记更新

--- a/Android/View/按键事件分发.md
+++ b/Android/View/按键事件分发.md
@@ -70,7 +70,7 @@ if (event.getRepeatCount() == 0) {
 添加长按响应以后要在onKeyUp()中添加长按冲突处理，否则长按事件和UP事件响应会同时起作用。？？？？？未验证
 
 ## 4.焦点的寻找和移动
-&emsp;&emsp;第一节的分发流程，省略了从ViewRootImpl开始的流程，`ViewRootImpl $ ViewPostImeInputStage`的`processKeyEvent()`方法中，会先向视图树分发按键事件，如果消费了（返回true）就return，否则（没有return，继续执行后续代码），判断如果按了上下左右或tab等按键就会执行当前焦点的 `view.focusSearch()`一直调用parent，最终执行`FocusFinder.getInstance().findNextFocus`方法得到应该获取焦点的View，调用`requestFocus()`。<br/>
+&emsp;&emsp;第一节的分发流程，省略了从ViewRootImpl开始的流程，`ViewRootImpl $ ViewPostImeInputStage`的`processKeyEvent()`方法中，会先向视图树分发按键事件，如果消费了（返回true）就return，否则（没有return，继续执行后续代码），判断如果按了上下左右或tab等按键就会执行当前焦点的 `view.focusSearch()`一直调用parent（可重写改变逻辑），最终执行`FocusFinder.getInstance().findNextFocus`方法得到应该获取焦点的View，调用`requestFocus()`。<br/>
 &emsp;&emsp;`findNextFocus`方法会先查找指定的下个焦点（例如`nextFocusLeft`），如果没有指定，则会调用`addFocusables()`将自身（如果是focusable）和可见的child View（如果是focusable）添加到待确定焦点的focusable视图集合中，children在添加到集合前会先进行排序，从上到下、从左到右(`layoutDirection`为`rtl`则从右到左)。parent和children的优先顺序可以通过`setDescendantFocusability()`来确定parent先于、后于还是限制children获取焦点。<br/>
 &emsp;&emsp;`addFocusables()`会遍历完所有视图，得到focusable视图集合，然后调用`FocusFinder.findNextFocus()`，从focusable视图集合中，根据矩形坐标，得到最佳的下个焦点视图，然后对其调用`requestFocus()`。
 
@@ -85,7 +85,9 @@ if (event.getRepeatCount() == 0) {
 界面显示时自动获取的焦点，和代码中去主动获取焦点，都要用到`requestFocus()`方法。
 
 * **View**自身调用`requestFocus()`会调用`handleFocusGainInternal()`使之上的每一级父ViewGroup的`mFocused`都指向下一级直到调用`requestFocus()`的View。
-* **ViewGroup**重写了`requestFocus()`的重载方法，根据设置的`descendantFocusability`，阻止children则再直接调用super尝试自身获取焦点，先于或后于children都会调用`onRequestFocusInDescendants()`方法，此方法中如果方向是下或者右，则正序遍历children调用requestFocus()，否则逆序调用。一旦一个child调用requestFocus()返回true则结束。
+* **ViewGroup**重写了`requestFocus()`的重载方法，根据设置的`descendantFocusability`，阻止children则再直接调用super尝试自身获取焦点，先于或后于children都会调用`onRequestFocusInDescendants()`方法，此方法中如果方向是下或者右或者前，则正序遍历children调用requestFocus()，否则逆序调用。一旦一个child调用requestFocus()返回true则结束。
+
+> 设置FocusableInTouchMode，会使触摸事件的第一次MotionEvent.ACTION_UP只是获得焦点，而不响应点击事件，已获取焦点后的后续点击才会响应。
 
 ## 5. Activity显示时自动获取焦点的调用栈
 自动获取默认焦点
