编译时注解笔记

--- a/Java/注解处理器.md
+++ b/Java/注解处理器.md
@@ -1,13 +1,284 @@
+[Java注解处理器]([https://www.race604.com/annotation-processing/](https://www.race604.com/annotation-processing/)
+)
 运行时注解使用反射，比较简单，这里分析编译时注解的使用。
+## 1.概述
+&emsp;&emsp;注解处理器运行在它自己的Java虚拟机进程中，Javac编译代码时启动一个完整Java虚拟机进程来运行注解处理器，意味着可以使用任何在其他Java应用中使用的的东西。
 
-在每一轮中，处理器被要求处理在前一轮产生的源文件和类文件上找到的注解的子集。第一轮处理的输入是工具运行的初始输入;这些初始输入可以被视为虚拟第0轮处理的输出。如果要求处理器在给定轮次上进行处理，则会要求处理后续轮次，包括最后一轮，即使没有要处理的注解。工具基础结构还可以要求处理器处理由工具的操作隐式生成的文件。
+编译时注解位于`javax.annotation.processing`包中
+而用来为Java编程语言建立模型的是`javax.lang.model`包，接口`AnnotatedConstruct`表示可以被注解的结构，它要么是元素（`Element`接口）要么是类型（`TypeMirror`接口）。从`ElementKind`和`TypeKind`中可见，元素包括`CLASS`、`INTERFACE`、`ENUM`、`ANNOTATION_TYPE`、`FIELD`、`METHOD`等，类型包括`INT`、`BOOLEAN`等基本类型及`EXECUTABLE`（可执行类型包括方法、构造器和初始代码块）等。感觉是从两种角度对结构分类。`Element`的`asType()`可以获得元素的类型。
 
-这也就是说我们实现的process方法有可能会被调用多次，因为我们生成的文件也有可能会包含相应的注解。例如，我们的源文件为SourceActivity.class，生成的文件为Generated.class，这样就会有三次循环，第一次输入为SourceActivity.class，输出为Generated.class；第二次输入为Generated.class，输出并没有产生新文件；第三次输入为空，输出为空。
+## 2.Processor接口
+&emsp;&emsp;注解处理发生在一系列的轮次中，在每一轮中，处理器被要求调用`process`方法处理在前一轮产生的源文件和类文件上找到的注解的子集。第一轮处理的输入是工具运行的初始输入，这些初始输入可以被视为虚拟第0轮处理的输出。如果要求处理器在给定轮次上进行处理，则会要求处理后续轮次，包括最后一轮，即使没有要处理的注解。工具基础设施（应该是指Java编译工具）还可以要求处理器处理由工具的操作隐式生成的文件。
 
-每次循环都会调用process方法，process方法提供了两个参数，第一个是我们请求处理注解类型的集合（也就是我们通过重写getSupportedAnnotationTypes方法所指定的注解类型），第二个是有关当前和上一次 循环的信息的环境。
+> 这也就是说我们实现的`process`方法有可能会被调用多次，因为我们生成的Java文件也有可能会包含相应的注解。例如，我们的源文件为SourceActivity.java，生成的文件为Generated.java，这样就会有三次循环，第一次输入为SourceActivity.java，输出为Generated.java；第二次输入为Generated.java，输出并没有产生新文件；第三次输入为空，输出为空。但如果生成的代码也有相应注解，则可能会处理更多次。如果只是产生普通文件如txt，则只会有两次循环，第一次输入为SourceActivity.java，输出为空，第二次输入为空，输出为空。
 
-每个处理器的实现必须提供公共无参构造函数来让工具使用以实例化处理器。工具基础结构将与实现此接口的类交互，如下所示：
-* 调用无参构造函数
-* 调用init
-* 调用getSupportedAnnotationTypes、getSupportedOptions、getSupportedSourceVersion，这些方法每次运行仅调用一次，而不是每轮都调用
-* 适当时，该工具调用Processor对象上的process方法;不会为每轮创建一个新的{@code Processor}对象
+&emsp;&emsp;每个处理器的实现必须提供公共无参构造函数来让工具使用以实例化处理器。工具基础设施将与实现此接口的类交互，如下所示：
+* 调用`无参构造函数`
+* 调用`init`
+* 调用`getSupportedAnnotationTypes`、`getSupportedOptions`、`getSupportedSourceVersion`，这些方法每次运行仅调用一次，而不是每轮处理都调用
+* 适当时，该工具调用`Processor`对象上的`process`方法；不会为每轮创建一个新的`Processor`对象
+
+&emsp;&emsp;（Java编译）工具使用一个*发现过程*去寻找注解处理器，并且决定它们是否应该被执行。通过配置工具，潜在的处理器集合能被控制。例如使用`javax.tools.JavaCompiler`等，或者命令行配置。工具请求运行哪一个 Processor 取决于根元素上出现哪些注解、Processor 处理哪些注解类型以及 Processor 是否声明它所处理的注解。Processor 将被要求处理它所支持的注释类型的子集，该集合可能是一个空集
+
+
+每次循环都会调用`process`方法，`process`方法提供了两个参数，第一个是我们请求处理注解类型的集合（也就是我们通过重写getSupportedAnnotationTypes方法所指定的注解类型），第二个是有关当前和上一次 循环的信息的环境。
+
+#### 2.1 init方法
+`void init(ProcessingEnvironment processingEnv)`
+用`ProcessingEnvironment`初始化处理器
+`ProcessingEnvironment `参数是工具框架提供给处理器的设备环境，它可以提供`Filer`来创造源文件、类文件、资源文件，或者`Messager`打印信息，或者`Elements`来操作元素，等。
+`ProcessingEnvironment `的主要方法如下：
+|方法|说明|
+|--|--|
+|Elements getElementUtils()|返回实现Elements接口的对象，用于操作元素的工具类。|
+|Filer getFiler()|返回实现Filer接口的对象，用于创建文件、类和辅助文件。|
+|Messager getMessager()|返回实现Messager接口的对象，用于报告错误信息、警告提醒。|
+|Map<String,String> getOptions()|返回执行注解处理器时传入的选项|
+|Types getTypeUtils()|返回实现Types接口的对象，用于操作类型的工具类|
+|...|...|
+
+#### 2.2 getSupportedAnnotationTypes
+`Set<String> getSupportedAnnotationTypes()`
+返回支持的注解全称字符串集合，注解全称字符串一般使用`MyAnnotation.class.getCanonicalName()`。或者可以是`name.*`形式，表示具有以`name`开头的规范名称的所有注解类型的集合。`*`表示所有注解类型的集合，但不要这样声明，除非实际处理所有文件，声明不必要的注解会导致某些环境性能下降。*可以通过注解设定*
+
+#### 2.3 getSupportedOptions
+`Set<String> getSupportedOptions()`
+返回处理器要识别的选项。如果执行注解处理器时输入了其中的选项，则可以通过`ProcessingEnvironment `的`getOptions()`方法得到。*可以通过注解设定*
+
+
+javac -processor ProcessorName1, ProcessorName2,... sourceFiles
+-Akey[=value] 传递给注释处理器的选项。这些不是由javac直接解释，而是可供各个处理器使用。 key应该是由“.”分隔的一个或多个字符串标识符。
+
+javaCompileOptions {
+      annotationProcessorOptions {
+        argument('butterknife.minSdk', minSdkVersion.apiString) // or any hardcoded apiLevel, e.g. '16'
+      }
+    }
+
+#### 2.4 getSupportedSourceVersion
+`SourceVersion getSupportedSourceVersion()`
+返回此注解处理器支持的最新源码版本。
+
+#### 2.5 process
+`boolean process(Set<? extends TypeElement> annotations,
+                    RoundEnvironment roundEnv)`<br/>
+`annotations`：要求被处理的注解类型集合<br/>
+`roundEnv`：有关当前和上一轮信息的环境<br/>
+`返回值`：true表示已处理当前注解类型集合，后续处理器不需处理，false表示后续处理器需要处理（**估计是多个注解处理器的情况下会有作用，每一轮处理一次调用每个处理器的process**）
+
+在这里写扫描、评估和处理注解的代码，以及生成Java文件。输入参数RoundEnviroment，可以让你查询出包含特定注解的被注解元素
+
+#### 2.6 getCompletions
+暂不明
+
+
+## 3. 重要概念
+#### 3.1 元素
+`Element`接口继承了`AnnotatedConstruct`接口，表示一个程序元素，比如包、类、或者方法，*每个元素表示一个静态的、语言级别的结构，而不是虚拟机中的运行时结构*。以下元素类型接口继承了`Element`接口：
+|类型|说明|
+|--|--|
+|TypeElement|表示一个类或接口程序元素，提供对有关类型及其成员的信息的访问。注意，枚举类型是一种类，而注解类型是一种接口|
+|ExecutableElement|表示类或接口中的方法、构造函数、初始代码块，包括注解类型元素|
+|PackageElement|表示一个包程序元素。提供对有关包及其成员的信息的访问|
+|VariableElement|表示一个字段、enum 常量、方法或构造方法参数、局部变量或异常参数|
+|TypeParameterElement|表示一般类、接口、方法或构造方法元素的泛型类型参数|
+```
+package com.example;    // PackageElement
+public class Foo         // TypeElement
+    <T extends Bar>{  // TypeParameterElement
+    private int a;      // VariableElement
+    private Foo other;  // VariableElement
+    public Foo () {}    // ExecuteableElement
+    public void setA (  // ExecuteableElement
+                     int newA   // VariableElement
+                     ) {}
+}
+```
+
+判断一个元素的类型，应该使用`Element.getKind()`方法配合`ElementKind`枚举类进行判断。尽量避免使用`instanceof`进行判断，因为比如`TypeElement`既表示类又表示一个接口，这样判断的结果可能不准确。例如我们判断一个元素是不是一个类：
+```
+if (element instanceof TypeElement) { //错误，也有可能是一个接口
+}
+
+if (element.getKind() == ElementKind.CLASS) { //正确
+    //doSomething
+}
+```
+下表为`ElementKind`枚举类中的部分常量：
+|常量|说明|
+|--|--|
+|PACKAGE|一个包|
+|ENUM|一个枚举类|
+|CLASS|一个普通类|
+|ANNOTATION_TYPE|一个注解类型（接口）|
+|INTERFACE|一个普通接口|
+|ENUM_CONSTANT|一个枚举常量|
+|FIELD|普通字段|
+|PARAMETER|方法或构造函数中的参数|
+|LOCAL_VARIABLE|局部变量|
+|EXCEPTION_PARAMETER|异常参数|
+|METHOD|方法|
+|CONSTRUCTOR|构造函数|
+|STATIC_INIT|静态初始代码块|
+|INSTANCE_INIT|实例初始代码块|
+|TYPE_PARAMETER|类、接口和方法中的泛型类型参数|
+|...|...|
+#### 3.2 类型
+`TypeMirror`接口继承了`AnnotatedConstruct`接口，表示Java编程语言中的类型。类型包括基本类型、声明类型（类和接口）、数组类型、类型变量、和空类型。还可以表示通配符类型参数、executable 的签名和返回类型，以及对应于包和关键字 void 的伪类型。下表是继承自`TypeMirror`的接口：
+|类型|说明|
+|--|--|
+|PrimitiveType|表示基本类型，包括boolean、int等|
+|DeclaredType|表示声明类型，类或者接口。包括参数化类型（java.util.Set<String>）和原始类型|
+|ArrayType|数组类型|
+|ErrorType|继承DeclaredType ，表示无法正常建模的类或接口，这可能是处理错误的结果，比如错误的类文件或者源代码|
+|ExecutableType|表示可执行类型，可执行类型是方法、构造函数或者初始代码块|
+|IntersectionType|交集类型，比如<T extends a & b>或者class C extends A implements B|
+|UnionType|并集类型，例如catch(Exception1 \| Exception2 e)|
+|NoType|在没有实际类型的情况下使用的伪类型，包括TypeKind.VOID、TypeKind.PACKAGE、TypeKind.NONE|
+|NullType|空类型|
+|TypeVariable|泛型中的类型变量|
+|ReferenceType|ArrayType、NullType、DeclaredType和TypeVariable的父接口|
+|WildcardType|表示通配符类型参数：?、 ? extends Number 、? super T|
+同样，判断`TypeMirror`类型时，最好使用`getKind()`获得`TypeKind`枚举常量更加准确。
+`TypeKind`枚举类中的部分常量：
+|常量|说明|
+|--|--|
+|BOOLEAN|布尔基本类型|
+|INT|整型基本类型|
+|...|...|
+|VOID|关键字void对应的伪类型|
+|NONE|无实际类型时使用的伪类型，比如Object的超类|
+|NULL|空类型|
+|ARRAY|数组类型|
+|DECLARED|类或接口|
+|ERROR|无法被处理的类或接口|
+|EXECUTABLE|方法、构造函数、初始代码块|
+|...|...|
+
+#### 3.3 创建文件
+&emsp;&emsp;`Filer`接口支持注解处理器创建新文件。以这种方式创建的文件将为实现此接口的注解处理工具所知，更好地使工具能够管理它们。在用于写入文件内容的`Writer`或`OutputStream`上调用`close`方法之后，将在后续的一轮处理中考虑由此工具创建的源文件和类文件。区分三种文件：源文件，类文件和辅助资源文件。
+
+命令行中`javac`的`-s`和`-d`可以指定生成的源文件和类文件的放置路径。
+###### 3.3.1 创建源文件
+```
+JavaFileObject createSourceFile(CharSequence name,
+                                    Element... originatingElements) 
+                                    throws IOException
+```
+`name`参数为生成的源文件的全限定名称，如"com.hfy.A"，则将产生com/hfy/A.java
+`originatingElements`变长参数，一般不用传值，表示与此文件的创建有因果关联的类型或包元素。此参数用于增量环境，官方文档意思应该是增量编译环境（对应全量编译环境）时，用于判断是否需要重新运行注解处理器或者删除已生成的文件。非增量环境则忽略此参数。例如：
+```
+//这个类将被注解处理器处理
+@Generate
+public class UserSource {}
+
+//然后在注解处理器中传入该类的对应的元素，表示文件的创建与该类有关系。猜测如果删除该类的@Generate注解，进行增量编译，则生成的类文件将被删除。
+filer.createSourceFile("GeneratedFromUserSource",
+                             eltUtils.getTypeElement("UserSource"));
+```
+
+此方法创建一个新的源文件并返回一个对象以允许写入它。文件的名称和路径（相对于源文件的根输出位置）基于要在该文件中声明的类型。如果声明了多个类型，则应使用主要顶级类型的名称（例如，公共类型）。
+`package-info.java`：还可以创建源文件以保存有关包的信息，包括包注解，要为已命名的包创建包信息源文件，请将name作为包的名称，后跟“.package-info”;要为未命名的包创建源文件，请使用“package-info”
+
+###### 3.3.2 创建类文件
+```
+JavaFileObject createClassFile(CharSequence name,
+                                   Element... originatingElements)
+                                   throws IOException
+```
+
+###### 3.3.3 创建辅助资源文件
+```
+FileObject createResource(JavaFileManager.Location location,
+                             CharSequence pkg,
+                             CharSequence relativeName,
+                             Element... originatingElements) throws IOException
+```
+
+###### 3.3.5 读取存在的文件
+```
+FileObject getResource(JavaFileManager.Location location,
+                           CharSequence pkg,
+                           CharSequence relativeName) throws IOException
+```
+> Square的开源库`JavaPoet`更简单易用用于生成代码
+
+#### 3.4 打印信息
+&emsp;&emsp;`Messager`为注解处理器提供报告错误信息、警告和其他提示的方式。可以传递元素，注解和注解值以提供消息的位置提示。但是，此类位置提示可能不可用或仅是近似值。
+&emsp;&emsp;如果打印了错误信息，那么下一轮次的处理中可以通过`RoundEnvironment.errorRaised()`方法得知前一轮是否产生错误。
+&emsp;&emsp;注意：此接口中的方法“打印”的消息可能会或可能不会显示为System.out或System.err等位置的文本输出。具体实现可以选择以不同的方式呈现该信息，例如窗口中的消息。
+|方法|说明|
+|--|--|
+|printMessage(Diagnostic.Kind kind, CharSequence msg)|打印特定种类的信息|
+|printMessage(Diagnostic.Kind kind, CharSequence msg, Element e)|并且传入元素作为错误位置提示|
+|printMessage(Diagnostic.Kind kind, CharSequence msg, Element e, AnnotationMirror a)|在带注解的元素的AnnotationMirror的位置打印指定类型的消息。|
+|printMessage(Diagnostic.Kind kind, CharSequence msg, Element e, AnnotationMirror a, AnnotationValue v) | 在注解元素的AnnotationMirror内的注解值的位置处打印指定类型的消息。 |
+
+#### 3.5 执行处理器和配置选项参数
+* 注册注解处理器：<br/>
+
+1. 打包jar的情况要按目录
+```
+MyProcess.jar
+--com
+----example
+------MyProcess.class
+--META-INF
+----services
+------javax.annotation.processing.Processor
+```
+`javax.annotation.processing.Processor`文件中的内容为注解处理器的全名列表，每一个处理器名称换行
+```
+com.example.MyProcessor  
+com.foo.OtherProcessor  //如果有多个处理器的话
+net.blabla.SpecialProcessor  //如果有多个处理器的话
+```
+
+命令行打包jar，且包含services及子文件，则需在当前目录创建./META-INF/services/javax.annotation.processing.Processor，则生成的jar包中会包含services/javax.annotation.processing.Processor。
+```
+jar -cvf hfy.jar META-INF/services/javax.annotation.processing.Processor  com/hfy/MyProcessor.class com/hfy/TestAnnotaion.class
+```
+然后把jar包放到classpath，然后即可被自动执行
+```
+javac -cp ".:hfy.jar"  com/hfy/Test.java -s ./
+```
+
+> 使用goole的auto-service注解处理器类，可以自定在jar包中生成META-INF/services/xxx
+
+2. 不打包成jar的话
+在包的基目录
+先编译注解处理器类
+```
+javac com/hfy/MyProcessor.java
+```
+，再执行以下命令，执行注解处理器
+```
+javac -processor com.hfy.MyProcessor, ProcessorClassName2 sourceFiles
+```
+
+在IDEA中则需要在设置中配置注解处理器，且要注意自身代码使用的注解包名一定要是注解处理器中要处理的注解包名。
+练习时，IDEA项目中定义了com.example.TestAnnotation，而注解处理器中用的是com.hfy.TestAnnotation，导致注解处理器一直没有执行。
+-------------------------
+
+命令行执行：
+```
+javac -processor ProcessorClassName1, ProcessorClassName2 
+      -Abutterknife.debuggable=false  sourceFiles
+```
+选项如果为one.two，那么命令行中就要用Aone.two=xxx，如果是aaa，命令行就要用Aaaa=xxx
+
+gradle配置
+```
+android {
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ one.two : xxx ]
+            }
+        }
+    }
+}
+```
+
+#### 3.6 获取注解元素
+在`process`方法中，可以通过`RoundEnvironment`来获取注解元素。
