添加屏幕适配、枚举细节和View加载的补充

--- a/Java/枚举.md
+++ b/Java/枚举.md
@@ -1,2 +1,100 @@
 [Java 枚举详解7种常见的用法](https://blog.csdn.net/qq_27093465/article/details/52180865)
 [深入理解Java枚举类型(enum)](https://blog.csdn.net/javazejian/article/details/71333103)
+
+## 说明
+枚举是Java编译器的语法糖，实际会得到一个继承了java.lang.Enum类的子类
+
+最基本的枚举类：
+```
+enum Day {
+    MONDAY, TUESDAY, WEDNESDAY,
+    THURSDAY, FRIDAY, SATURDAY, SUNDAY
+}
+```
+编译成class文件后反编译得到：
+```
+//反编译Day.class
+final class Day extends Enum
+{
+    //编译器为我们添加的静态的values()方法
+    public static Day[] values()
+    {
+        return (Day[])$VALUES.clone();
+    }
+    //编译器为我们添加的静态的valueOf()方法，注意间接调用了Enum也类的valueOf方法
+    public static Day valueOf(String s)
+    {
+        return (Day)Enum.valueOf(com/xxx/Day, s);
+    }
+    //私有构造函数
+    private Day(String s, int i)
+    {
+        super(s, i);
+    }
+     //前面定义的7种枚举实例
+    public static final Day MONDAY;
+    public static final Day TUESDAY;
+    public static final Day WEDNESDAY;
+    public static final Day THURSDAY;
+    public static final Day FRIDAY;
+    public static final Day SATURDAY;
+    public static final Day SUNDAY;
+    private static final Day $VALUES[];
+
+    static 
+    {    
+        //实例化枚举实例
+        MONDAY = new Day("MONDAY", 0);
+        TUESDAY = new Day("TUESDAY", 1);
+        WEDNESDAY = new Day("WEDNESDAY", 2);
+        THURSDAY = new Day("THURSDAY", 3);
+        FRIDAY = new Day("FRIDAY", 4);
+        SATURDAY = new Day("SATURDAY", 5);
+        SUNDAY = new Day("SUNDAY", 6);
+        $VALUES = (new Day[] {
+            MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
+        });
+    }
+}
+```
+
+自定义构造函数的枚举类：
+```
+enum Sex {
+        MALE("man"), FEMALE("woman");
+        String des;
+
+        Sex(String des) {
+            this.des = des;
+        }
+    }
+```
+实际生成类：
+```
+public final class Sex extends Enum {
+        public static Sex[] values() {
+            return (Sex[]) $VALUES.clone();
+        }
+
+        public static Sex valueOf(String s) {
+            return (Sex) Enum.valueOf(com / xxx / Sex, s);
+        }
+
+        private Sex(String s, int i, String s1) {
+            super(s, i);
+            des = s1;
+        }
+
+        public static final Sex MALE;
+        public static final Sex FEMALE;
+        String des;
+        private static final Sex $VALUES[];
+
+        static {
+            MALE = new Sex("MALE", 0, "man");
+            FEMALE = new Sex("FEMALE", 0, "woman");
+            $VALUES = (new Sex[]{MALE, FEMALE});
+        }
+    }
+}
+```
