c语言笔记、安卓笔记更新

--- a/Android/View/按键事件分发.md
+++ b/Android/View/按键事件分发.md
@@ -62,12 +62,12 @@ public boolean dispatchKeyEvent(KeyEvent event) {
 为了能让系统调用`onKeyLongPress()`方法，我们必须要在`onKeyDown()`方法中调用`event.startTracking()`方法并返回`true`才可以。
 ```
 在onKeyDown中对要处理长按的的事件添加以下代码
-if (event.getRepeatCount() == 0) {
+if (keyCode == KeyEvent.KEYCODE_X && event.getRepeatCount() == 0) {
 	event.startTracking();
 }
 ```
-
-添加长按响应以后要在onKeyUp()中添加长按冲突处理，否则长按事件和UP事件响应会同时起作用。？？？？？未验证
+如果在onKeyLongPress中返回true，那么在onKeyUp中KeyEvent的flag会有FLAG_CANCELED | FLAG_CANCELED_LONG_PRESS，可用于判断发生了长按
+添加长按响应以后要在onKeyUp()中添加长按冲突处理，否则长按事件和UP事件响应会同时起作用。
 
 ## 4.焦点的寻找和移动
 &emsp;&emsp;第一节的分发流程，省略了从ViewRootImpl开始的流程，`ViewRootImpl $ ViewPostImeInputStage`的`processKeyEvent()`方法中，会先向视图树分发按键事件，如果消费了（返回true）就return，否则（没有return，继续执行后续代码），判断如果按了上下左右或tab等按键就会执行当前焦点的 `view.focusSearch()`一直调用parent（可重写改变逻辑），最终执行`FocusFinder.getInstance().findNextFocus`方法得到应该获取焦点的View，调用`requestFocus()`。<br/>
