--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -1,5 +1,7 @@
 传递到activity的流程可以通过打印调用栈查看
 
+待办：注意cancel
+
 ## 1.ViewGroup之dispatchTouchEvent(MotionEvent ev)
 首先分析`ViewGroup`的`dispatchTouchEvent`源码
 **几个注意点：**
