添加C语言笔记、Android动画笔记

--- a/Android/Android动画/属性动画.md
+++ b/Android/Android动画/属性动画.md
@@ -10,7 +10,7 @@
 
 &#160; &#160; &#160; &#160;`ValueAnimator`对象跟踪动画的时间变化，例如动画已经运行的时长，以及动画属性的当前值。
 &#160; &#160; &#160; &#160;`ValueAnimator`对象封装了一个定义动画插值的`TimeInterpolator`（是所有`Interpolator`的顶级父接口），以及一个定义了如何计算动画属性的值的`TypeEvaluator`。 例如，使用`TimeInterpolator`的子类`AccelerateDecelerateInterpolator`，`TypeEvaluator`的子类`IntEvaluator`。
-&#160; &#160; &#160; &#160;设置好`起始值`和`结束值`，`duration`等参数。当调用`start()`动画开始， 在整个动画期间，`ValueAnimator`计算已经过的时间比(elapsed fraction)，区间[0,1]，代表动画的完成率，0表示0%，1表示100%。`Interpolator`根据这个时间比来计算出`当前属性值/(结束值-起始值)`这个比值，然后`TypeEvaluator`就根据这个`插值比`得到当前的属性值，然后回调`ValueAnimator`设置的`AnimatorUpdateListener`的`onAnimationUpdate`方法，此时可通过`valueAnimator.getAnimatedValue()`方法得到此时的属性值，并利用当前属性值来设置某些需要变化的状态。
+&#160; &#160; &#160; &#160;设置好`起始值`和`结束值`，`duration`等参数。当调用`start()`动画开始， 在整个动画期间，`ValueAnimator`计算已经过的时间比(elapsed fraction)，区间[0,1]，代表动画的完成率，0表示0%，1表示100%。`Interpolator`根据这个时间比来计算出`(当前属性值-起始值)/(结束值-起始值)`这个比值，然后`TypeEvaluator`就根据这个`插值比`得到当前的属性值，然后回调`ValueAnimator`设置的`AnimatorUpdateListener`的`onAnimationUpdate`方法，此时可通过`valueAnimator.getAnimatedValue()`方法得到此时的属性值，并利用当前属性值来设置某些需要变化的状态。
 &#160; &#160; &#160; &#160;以下面代码为例，从起始值0到结束值1，经过100ms的时间，默认插值器。
 > `ofFloat(float... values)`和`setFloatValues(float... values)`都是不定长参数（`ofFloat`内部调用了`setFloatValues`），可以设置多个参数实现更复杂的变化。**例如：**`ofInt(0,1,5)`且`duration`为`2`秒，则从`0`到`1`和`1`到`5`都是耗用`1`秒时间，即**均分**。
 还有对应的`ofInt`和`ofObject`，`ofObject`需要传入自定义的`TypeEvaluator`，因为对象的变化需要自行设定。
@@ -193,8 +193,12 @@ viewGroup.setLayoutTransition(layoutTransition);
 
 如果要在状态改变时不播放动画而是播放`drawable`，则使用`AnimatedStateListDrawable`（不属于属性动画）
 
-## 8.TypeEvaluator
-`TypeEvaluator`(估值器)用于利用`Interpolator`的结果来计算当前的属性值，属性动画已经自带了如`IntEvaluator`、`FloatEvaluator`、`ArgbEvaluator`等估值器。但如果使用`ofObject()`方法则需要自定义实现`TypeEvaluator`接口，来处理特定对象类型。
+## 8.Interpolator
+android 5.0 引入了`PathInterpolator `
+Interpolator接收动画进度的【0，1】的值，一般是时间比值；返回插值，插值 = (当前属性值-起始值)/(起始值-结束值)，可以大于1或者小于0，比如越界回弹效果。
+
+## 9.TypeEvaluator
+`TypeEvaluator`(估值器)用于利用`Interpolator`的插值结果来计算当前的属性值，属性动画已经自带了如`IntEvaluator`、`FloatEvaluator`、`ArgbEvaluator`等估值器。但如果使用`ofObject()`方法则需要自定义实现`TypeEvaluator`接口，来处理特定对象类型。可以看出Interpolator和TypeEvaluator的功能实际是强相关的，但是因为属性有不同的类型，所以分成了两个类，一个计算比值，一个用比值计算实际类型的属性值。
 
 下面是`FloatEvaluator`中的代码实现
 ```
@@ -204,11 +208,10 @@ public Float evaluate(float fraction, Number startValue, Number endValue) {
 }
 ```
 
-## 9.Interpolator
-android 5.0 引入了`PathInterpolator `
 ## 10.PropertyValuesHolder和KeyFrames（关键帧）
-&#160; &#160; &#160; &#160;`PropertyValuesHolder`持有要操作的属性以及该属性在动画期间应采用的值。`PropertyValuesHolder`对象可用于使用`ValueAnimator`或`ObjectAnimator`创建动画，这些动画可并行处理多个不同的属性，即可以**同时执行多个属性改变的动画**。
+&#160; &#160; &#160; &#160;`PropertyValuesHolder`持有要操作的属性以及该属性在动画期间应采用的值（使用`ValueAnimator`时，属性为空字符串）。`PropertyValuesHolder`对象可用于使用`ValueAnimator`或`ObjectAnimator`创建动画，这些动画可并行处理多个不同的属性，即可以**同时执行多个属性改变的动画**。
 &#160; &#160; &#160; &#160;在前面接触到的`ofFloat()`、`ofInt()`等方法内部实质也使用了`PropertyValuesHolder`和`KeyFrames`。而`ofPropertyValuesHolder()`方法将直接使用`PropertyValuesHolder`来设置属性动画，变长参数传入多个`PropertyValuesHolder`实例时就会同时对多个属性同时执行动画操作。（`PropertyValuesHolder`也有`ofObect`，也需要自定义`TypeEvaluator`）。
+
 ---------------------------------------
 如下代码，同时执行`Rotation`和`BackgroundColor`的改变动画
 ```
@@ -249,3 +252,184 @@ animator.start();
 ```
 view.animate().x(50f).y(100f);
 ```
+
+## 12.属性动画原理
+属性动画所有的创建方法，最终都是调用`ValueAnimator.setValues(PropertyValuesHolder... values)`方法。
+```
+public void setValues(PropertyValuesHolder... values) {
+        int numValues = values.length;
+        mValues = values;
+        mValuesMap = new HashMap<String, PropertyValuesHolder>(numValues);
+        for (int i = 0; i < numValues; ++i) {
+            PropertyValuesHolder valuesHolder = values[i];
+            mValuesMap.put(valuesHolder.getPropertyName(), valuesHolder);
+        }
+        // New property/values/target should cause re-initialization prior to starting
+        mInitialized = false;
+    }
+```
+ValueAnimator的所有设置动画属性值的方法，最终都会将值传入用于构建`PropertyValuesHolder`，`PropertyValuesHolder`中将属性值存入其成员`Keyframes`（其子类IntKeyframeSet等）  
+Keyframes（包括其实现类）是用于持有多个Keyframe的类。
+
+属性动画中有`PropertyValuesHolder`数组成员变量，即一个属性动画对应一个或多个`PropertyValuesHolder`，一个`PropertyValuesHolder`对应任意个`Keyframe`，任意个`Keyframe`体现为`PropertyValuesHolder`的成员变量`Keyframes`，但`Keyframes`是一个接口，实际引用的实例是子类`KeyframeSet`等。
+
+设置了`PropertyValuesHolder`后，调用`start()`方法开始执行动画：
+```
+    private void start(boolean playBackwards) {
+        ...
+        addAnimationCallback(0);
+
+        if (mStartDelay == 0 || mSeekFraction >= 0 || mReversing) {
+            // If there's no start delay, init the animation and notify start listeners right away
+            // to be consistent with the previous behavior. Otherwise, postpone this until the first
+            // frame after the start delay.
+            startAnimation();
+            if (mSeekFraction == -1) {
+                // No seek, start at play time 0. Note that the reason we are not using fraction 0
+                // is because for animations with 0 duration, we want to be consistent with pre-N
+                // behavior: skip to the final value immediately.
+                setCurrentPlayTime(0);
+            } else {
+                setCurrentFraction(mSeekFraction);
+            }
+        }
+    }
+```
+`addAnimationCallback(0)`方法中，调用`Choreographer`的`postFrameCallback`，FrameCallback中调用`doAnimationFrame`，并且再调用`postFrameCallback`继续监听下一个屏幕刷新信号。callback代码：
+```
+private final Choreographer.FrameCallback mFrameCallback = new Choreographer.FrameCallback() {
+    @Override
+    public void doFrame(long frameTimeNanos) {
+        doAnimationFrame(getProvider().getFrameTime());
+        if (mAnimationCallbacks.size() > 0) {
+            getProvider().postFrameCallback(this);
+        }
+    }
+};
+```
+`doAnimationFrame`会调用`ValueAnimator`的`doAnimationFrame(long frameTime)`方法：
+```
+public final boolean doAnimationFrame(long frameTime) {
+    ...
+    boolean finished = animateBasedOnTime(currentTime);//关键是调用此方法
+    ...
+}
+```
+其余代码主要是处理暂停、继续、结束等状态，代码省略，这里简单描述。调用`pause()`后置mPaused为true，再次调用doAnimationFrame时判断暂停则会删除FrameCallback回调，也就不会再监听下一个屏幕刷新信号；调用`resume()`会修改标志，并再次发送下一个监听，则又会调用到doAnimationFrame。像`cancel()`、`end()`也是类似删除回调。
+
+`animateBasedOnTime()`：
+```
+boolean animateBasedOnTime(long currentTime) {
+    boolean done = false;
+    if (mRunning) {
+        // 计算动画进度
+        final long scaledDuration = getScaledDuration();
+        final float fraction = scaledDuration > 0 ?
+                (float)(currentTime - mStartTime) / scaledDuration : 1f;
+        ...
+        mOverallFraction = clampFraction(fraction);//调整时间进度比
+        float currentIterationFraction = getCurrentIterationFraction(
+                mOverallFraction, mReversing);
+        // 根据进度计算值
+        animateValue(currentIterationFraction);
+    }
+    return done;
+}
+```
+
+`animateValue(float fraction)`：
+```
+void animateValue(float fraction) {
+    //传入时间比，使用插值器计算插值
+    fraction = mInterpolator.getInterpolation(fraction);
+    mCurrentFraction = fraction;
+    int numValues = mValues.length;
+    //根据得到的进度，计算实际的属性值
+    for (int i = 0; i < numValues; ++i) {
+        mValues[i].calculateValue(fraction);
+    }
+    //通知回调
+    if (mUpdateListeners != null) {
+        int numListeners = mUpdateListeners.size();
+        for (int i = 0; i < numListeners; ++i) {
+            mUpdateListeners.get(i).onAnimationUpdate(this);
+        }
+    }
+}
+```
+关键在于mValues[i].calculateValue(fraction)，即`PropertyValuesHolder`的`calculateValue`方法：
+```
+void calculateValue(float fraction) {
+    Object value = mKeyframes.getValue(fraction); //调用了Keyframes的getValue方法
+    mAnimatedValue = mConverter == null ? value : mConverter.convert(value);
+}
+```
+Keyframes接口的实现类：KeyframeSet，KeyframeSet的子类包括IntKeyframeSet等。
+以`IntKeyframeSet`为例，其getValue方法调用了getIntValue方法，内容是根据fraction值，结合持有的多个Keyframe计算属性值：
+```
+public Object getValue(float fraction) {
+    return getIntValue(fraction);
+}
+
+//传入插值，用其计算属性值，插值可以小于0，也可以大于1
+public int getIntValue(float fraction) {
+    if (fraction <= 0f) {
+        final IntKeyframe prevKeyframe = (IntKeyframe) mKeyframes.get(0);
+        final IntKeyframe nextKeyframe = (IntKeyframe) mKeyframes.get(1);
+        int prevValue = prevKeyframe.getIntValue();
+        int nextValue = nextKeyframe.getIntValue();
+        float prevFraction = prevKeyframe.getFraction();
+        float nextFraction = nextKeyframe.getFraction();
+        final TimeInterpolator interpolator = nextKeyframe.getInterpolator();
+        if (interpolator != null) {
+            fraction = interpolator.getInterpolation(fraction);
+        }
+        float intervalFraction = (fraction - prevFraction) / (nextFraction - prevFraction);
+        return mEvaluator == null ?
+                prevValue + (int)(intervalFraction * (nextValue - prevValue)) :
+                ((Number)mEvaluator.evaluate(intervalFraction, prevValue, nextValue)).
+                        intValue();
+    } else if (fraction >= 1f) {
+        final IntKeyframe prevKeyframe = (IntKeyframe) mKeyframes.get(mNumKeyframes - 2);
+        final IntKeyframe nextKeyframe = (IntKeyframe) mKeyframes.get(mNumKeyframes - 1);
+        int prevValue = prevKeyframe.getIntValue();
+        int nextValue = nextKeyframe.getIntValue();
+        float prevFraction = prevKeyframe.getFraction();
+        float nextFraction = nextKeyframe.getFraction();
+        final TimeInterpolator interpolator = nextKeyframe.getInterpolator();
+        if (interpolator != null) {
+            fraction = interpolator.getInterpolation(fraction);
+        }
+        float intervalFraction = (fraction - prevFraction) / (nextFraction - prevFraction);
+        return mEvaluator == null ?
+                prevValue + (int)(intervalFraction * (nextValue - prevValue)) :
+                ((Number)mEvaluator.evaluate(intervalFraction, prevValue, nextValue)).intValue();
+    }
+    IntKeyframe prevKeyframe = (IntKeyframe) mKeyframes.get(0);
+    for (int i = 1; i < mNumKeyframes; ++i) {
+        IntKeyframe nextKeyframe = (IntKeyframe) mKeyframes.get(i);
+        if (fraction < nextKeyframe.getFraction()) {
+            final TimeInterpolator interpolator = nextKeyframe.getInterpolator();
+            float intervalFraction = (fraction - prevKeyframe.getFraction()) /
+                (nextKeyframe.getFraction() - prevKeyframe.getFraction());
+            int prevValue = prevKeyframe.getIntValue();
+            int nextValue = nextKeyframe.getIntValue();
+            // Apply interpolator on the proportional duration.
+            if (interpolator != null) {
+                intervalFraction = interpolator.getInterpolation(intervalFraction);
+            }
+            return mEvaluator == null ?
+                    prevValue + (int)(intervalFraction * (nextValue - prevValue)) :
+                    ((Number)mEvaluator.evaluate(intervalFraction, prevValue, nextValue)).
+                            intValue();
+        }
+        prevKeyframe = nextKeyframe;
+    }
+    // shouldn't get here
+    return ((Number)mKeyframes.get(mNumKeyframes - 1).getValue()).intValue();
+}
+```
+
+给`Keyframe`设置Interpolator，只会让此帧和上一帧之间生效。给animator设置Interpolator，则会全过程生效。
+
+[属性动画 ValueAnimator 运行原理全解析](https://www.jianshu.com/p/46f48f1b98a9)
