--- a/Java/泛型.md
+++ b/Java/泛型.md
@@ -85,5 +85,5 @@ void foo(List<?> list){
         
 }
 ```
-但是此时将无法使用和传入泛型类型对象的方法，除非传入null；返回泛型类型对象的方法将无法赋值给任何变量。所以只有在不关心类型的时候才使用<?>
+但是此时将无法使用传入泛型类型对象的方法，除非传入null；返回泛型类型对象的方法将无法赋值给任何变量。所以只有在不关心类型的时候才使用<?>
 
