完成属性动画笔记

--- a/Android/Android动画/属性动画.md
+++ b/Android/Android动画/属性动画.md
@@ -208,6 +208,8 @@ public Float evaluate(float fraction, Number startValue, Number endValue) {
 }
 ```
 
+> 调用ValueAnimator的setEvaluator方法设置估值器，实质是设置给ValueAnimator内部的PropertyValuesHolder的Keyframes实现类对象的。例如Keyframes实现类KeyframeSet的子类IntKeyframeSet会在getIntValue方法中使用设置的mEvaluator。
+
 ## 10.PropertyValuesHolder和KeyFrames（关键帧）
 &#160; &#160; &#160; &#160;`PropertyValuesHolder`持有要操作的属性以及该属性在动画期间应采用的值（使用`ValueAnimator`时，属性为空字符串）。`PropertyValuesHolder`对象可用于使用`ValueAnimator`或`ObjectAnimator`创建动画，这些动画可并行处理多个不同的属性，即可以**同时执行多个属性改变的动画**。
 &#160; &#160; &#160; &#160;在前面接触到的`ofFloat()`、`ofInt()`等方法内部实质也使用了`PropertyValuesHolder`和`KeyFrames`。而`ofPropertyValuesHolder()`方法将直接使用`PropertyValuesHolder`来设置属性动画，变长参数传入多个`PropertyValuesHolder`实例时就会同时对多个属性同时执行动画操作。（`PropertyValuesHolder`也有`ofObect`，也需要自定义`TypeEvaluator`）。
@@ -317,13 +319,14 @@ public final boolean doAnimationFrame(long frameTime) {
 ```
 其余代码主要是处理暂停、继续、结束等状态，代码省略，这里简单描述。调用`pause()`后置mPaused为true，再次调用doAnimationFrame时判断暂停则会删除FrameCallback回调，也就不会再监听下一个屏幕刷新信号；调用`resume()`会修改标志，并再次发送下一个监听，则又会调用到doAnimationFrame。像`cancel()`、`end()`也是类似删除回调。
 
-`animateBasedOnTime()`：
+`ValueAnimator.animateBasedOnTime()`：
 ```
 boolean animateBasedOnTime(long currentTime) {
     boolean done = false;
     if (mRunning) {
         // 计算动画进度
-        final long scaledDuration = getScaledDuration();
+        final long scaledDuration = getScaledDuration();//总时间
+        //fraction为已执行的时间占总时间的比值
         final float fraction = scaledDuration > 0 ?
                 (float)(currentTime - mStartTime) / scaledDuration : 1f;
         ...
@@ -337,11 +340,12 @@ boolean animateBasedOnTime(long currentTime) {
 }
 ```
 
-`animateValue(float fraction)`：
+`ValueAnimator.animateValue(float fraction)`：
 ```
+//此时传入的fraction是时间比
 void animateValue(float fraction) {
     //传入时间比，使用插值器计算插值
-    fraction = mInterpolator.getInterpolation(fraction);
+    fraction = mInterpolator.getInterpolation(fraction);//现在fraction是插值，也就是属性比
     mCurrentFraction = fraction;
     int numValues = mValues.length;
     //根据得到的进度，计算实际的属性值
@@ -374,17 +378,21 @@ public Object getValue(float fraction) {
 //传入插值，用其计算属性值，插值可以小于0，也可以大于1
 public int getIntValue(float fraction) {
     if (fraction <= 0f) {
+        //当插值<=0时，用第一帧和第二帧来计算属性值
         final IntKeyframe prevKeyframe = (IntKeyframe) mKeyframes.get(0);
         final IntKeyframe nextKeyframe = (IntKeyframe) mKeyframes.get(1);
         int prevValue = prevKeyframe.getIntValue();
         int nextValue = nextKeyframe.getIntValue();
         float prevFraction = prevKeyframe.getFraction();
         float nextFraction = nextKeyframe.getFraction();
+        //如果KeyFrame设置了插值器，则用它再次计算插值
         final TimeInterpolator interpolator = nextKeyframe.getInterpolator();
         if (interpolator != null) {
             fraction = interpolator.getInterpolation(fraction);
         }
+        //用传入的插值计算对应到第一和第二帧之间的插值
         float intervalFraction = (fraction - prevFraction) / (nextFraction - prevFraction);
+        //将插值传给估值器，计算属性值（此估值器由ValueAnimator的setEvaluator方法传入，不传则为null）
         return mEvaluator == null ?
                 prevValue + (int)(intervalFraction * (nextValue - prevValue)) :
                 ((Number)mEvaluator.evaluate(intervalFraction, prevValue, nextValue)).
@@ -429,6 +437,26 @@ public int getIntValue(float fraction) {
     return ((Number)mKeyframes.get(mNumKeyframes - 1).getValue()).intValue();
 }
 ```
+考虑如下情况：
+```
+Keyframe frame0 = Keyframe.ofFloat(0f, 0f);
+Keyframe frame1 = Keyframe.ofFloat(0.5f, 2f);
+Keyframe frame2 = Keyframe.ofFloat(1f, 4f);
+PropertyValuesHolder propertyValuesHolder = PropertyValuesHolder.ofKeyframe("", frame0, frame1, frame2);
+ValueAnimator valueAnimator = ValueAnimator.ofPropertyValuesHolder(propertyValuesHolder);
+valueAnimator.setInterpolator(new AccelerateInterpolator());
+valueAnimator.setDuration(4000);
+valueAnimator.addUpdateListener(new ValueAnimator.AnimatorUpdateListener() {
+    @Override
+    public void onAnimationUpdate(ValueAnimator animation) {
+        Log.e(TAG, "onAnimationUpdate: " + animation.getAnimatedValue());
+        button.setTranslationY((Float) animation.getAnimatedValue());
+    }
+});
+valueAnimator.start();
+```
+设置了三帧，且可看作匀速增加，但设置加速的插值器，结果中动画运行到中间的时候属性值并不是接近2，而是接近1，所以可以看出设置了某一帧的属性值，但到了该时间点的属性值并不一定是该值，而会受到插值器的影响。
+
 
 给`Keyframe`设置Interpolator，只会让此帧和上一帧之间生效。给animator设置Interpolator，则会全过程生效。
 
