更新安卓笔记，添加C语言链接

--- a/C/作用域规则.md
+++ b/C/作用域规则.md
@@ -57,7 +57,7 @@ int entity = 3;
 ```
 该声明创建了一个名为`entity`的*标识符*（identifier）。标识符是一个名称，在这种情况下，标识符可以用来指定特定对象的内容。在该例中，标识符`entity`即是软件（C程序）指定硬件内存中的对象的方式。该声明还提供了存储在对象中的值。
 
-可以用**存储期**描述对象，所谓存储期是指对象在内存中保留了多长时间。**标识符**用于访问对象，可以用**作用域**和**链接**描述标识符，表明程序的哪些部分可以使用它。标识符可在多文件、单文件、函数内甚至仅限代码块中使用。对象可存在于程序的执行期，也可仅存于所在函数的执行期。对于并发编程，对象可以在指定线程的执行期存在。可以通过函数调用的方式显示分配和释放内存。
+可以用**存储期**描述对象，所谓存储期是指对象在内存中保留了多长时间。**标识符**用于访问对象，可以用**作用域**和**链接**来描述标识符，表明程序的哪些部分可以使用它。标识符可在多文件、单文件、函数内甚至仅限代码块中使用。对象可存在于程序的执行期，也可仅存于所在函数的执行期。对于并发编程，对象可以在指定线程的执行期存在。可以通过函数调用的方式显示分配和释放内存。
 
 ## 作用域
 *作用域*描述程序中可访问标识符的区域。一个C变量的作用域可以是块作用域、函数作用域、函数原型作用域或文件作用域。
