--- a/Android/View/按键事件分发.md
+++ b/Android/View/按键事件分发.md
@@ -60,6 +60,7 @@ public boolean dispatchKeyEvent(KeyEvent event) {
 
 ## 3. 长按
 为了能让系统调用`onKeyLongPress()`方法，我们必须要在`onKeyDown()`方法中调用`event.startTracking()`方法并返回`true`才可以。
+`event.startTracking()`会设置标志位，在KeyEvent.dispatch
 ```
 在onKeyDown中对要处理长按的的事件添加以下代码
 if (keyCode == KeyEvent.KEYCODE_X && event.getRepeatCount() == 0) {
