更新编译相关内容

--- a/C/编译链接过程.md
+++ b/C/编译链接过程.md
@@ -5,7 +5,7 @@
 2.编译，生成汇编代码（.s文件）：
     gcc –S hello.i –o hello.s
 
-3.汇编，生成目标文件（.o文件）：
+3.汇编，生成可重定位目标文件（.o文件）：
     gcc –c hello.s –o hello.o
 
 4.链接，生成可执行文件：
