--- a/Java/类路径和类加载器.md
+++ b/Java/类路径和类加载器.md
@@ -17,6 +17,9 @@
 1. 先在类路径中查找import的所有包名对应的目录（java.lang包被默认导入）
 2. 没有就从当前目录中对应包名路径查找
 
+javac命令编译Java源文件时，如果Main依赖A，那么编译Main必须有A的源文件或者类文件才能通过编译，而编译A则只需要A，因为A没有依赖其他类。  
+而C语言，编译成拓展名为.o的目标文件是不用依赖的C文件的，但是编译为可执行文件时是需要的。
+
 ## 2.类加载器
 每个Java程序至少拥有三个类加载器：
 * 引导类加载器（`Bootstrap`）：`rt.jar`
