--- a/Android/View/按键事件分发.md
+++ b/Android/View/按键事件分发.md
@@ -67,12 +67,14 @@ if (keyCode == KeyEvent.KEYCODE_X && event.getRepeatCount() == 0) {
 	event.startTracking();
 }
 ```
-如果在onKeyLongPress中返回true，那么在onKeyUp中KeyEvent的flag会有FLAG_CANCELED | FLAG_CANCELED_LONG_PRESS，可用于判断发生了长按
+如果在onKeyLongPress中返回true，那么在onKeyUp中KeyEvent的flag会有FLAG_CANCELED | FLAG_CANCELED_LONG_PRESS，可用于判断发生了长按，
 添加长按响应以后要在onKeyUp()中添加长按冲突处理，否则长按事件和UP事件响应会同时起作用。
 
 ## 4.焦点的寻找和移动
 &emsp;&emsp;第一节的分发流程，省略了从ViewRootImpl开始的流程，`ViewRootImpl $ ViewPostImeInputStage`的`processKeyEvent()`方法中，会先向视图树分发按键事件，如果消费了（返回true）就return，否则（没有return，继续执行后续代码），判断如果按了上下左右或tab等按键就会执行当前焦点的 `view.focusSearch()`一直调用parent（可重写改变逻辑），最终执行`FocusFinder.getInstance().findNextFocus`方法得到应该获取焦点的View，调用`requestFocus()`。<br/>
-&emsp;&emsp;`findNextFocus`方法会先调用`findNextUserSpecifiedFocus()`查找指定的下个焦点（例如`nextFocusLeft`），如果没有指定，则会调用`addFocusables()`将自身（如果是focusable）和可见的child View（如果是focusable）添加到待确定焦点的focusable视图集合中，children在添加到集合前会先进行排序，从上到下、从左到右(`layoutDirection`为`rtl`则从右到左)。parent和children的优先顺序可以通过`setDescendantFocusability()`来确定parent先于、后于还是限制children获取焦点。<br/>
+&emsp;&emsp;`findNextFocus`方法会先调用`findNextUserSpecifiedFocus()`查找指定的下个焦点（例如`nextFocusLeft`），如果没有指定，则会调用`addFocusables()`将自身（如果是focusable）和可见的child View（如果是focusable）添加到待确定焦点的focusable视图集合中，children在添加到集合前会先进行排序，从上到下、从左到右(`layoutDirection`为`rtl`则从右到左)。parent和children的优先顺序可以通过`setDescendantFocusability()`来确定parent先于、后于还是限制children获取焦点。**默认FOCUS_BEFORE_DESCENDANTS。FOCUS_BEFORE_DESCENDANTS情况，若Parent的focusable为true，则只会添加Parent到focusable视图集合；若Parent为的focusable为false，则添加children。FOCUS_BLOCK_DESCENDANTS情况，只添加Parent，且Parent的focusable必须是true才添加。FOCUS_AFTER_DESCENDANTS情况，Parent只在自身focusable为true且children都是focusable为false才添加，child只要focusable为true就会添加到focusable集合**  
+> 注意：如果父布局为FOCUS_BLOCK_DESCENDANTS，那么直接调用子view的requestFocus也无法获得焦点。源码可见View的hasAncestorThatBlocksDescendantFocus()方法
+
 &emsp;&emsp;`addFocusables()`会遍历完所有视图，得到focusable视图集合，然后调用`FocusFinder.findNextFocus()`，从focusable视图集合中，根据矩形坐标，得到最佳的下个焦点视图，然后对其调用`requestFocus()`。
 
 **注意：**因上原因，一般不要消费方向键，因为如果消费了方向键，那么按下方向键就不能转移焦点到另外的view上。
