泛型的理解

--- a/Java/泛型.md
+++ b/Java/泛型.md
@@ -87,3 +87,29 @@ void foo(List<?> list){
 ```
 但是此时将无法使用传入泛型类型对象的方法，除非传入null；返回泛型类型对象的方法将无法赋值给任何变量。所以只有在不关心类型的时候才使用<?>
 
+#### 2. 泛型 协变和逆变
+Java的泛型本身具有「不可变性 Invariance」，也就是
+```
+List<Integer> 不是 List<Number> 的子类
+```
+
+Java的数组是协变的，举例：Integer 是 Number 的子类，所以在要求是 Number[] 的地方可以传递 Integer[]
+
+> 协变（即F是C的父类，f(F)是f(C)的父类）
+
+而Java的泛型要实现协变，需要借助 ? extends 来实现
+```
+List<Integer> 是 List<? extends Number> 的子类
+```
+此时只能读，不能写。因为知道是Number的子类，所以可以当作Number类型读，但是却不能写入，因为不能确定具体是Number的哪种子类
+
+
+> 逆变（即F是C的父类，f(C)是f(F)的父类）
+
+借助 ? super 实现逆变
+```
+List<Object> 是 List<? super Number> 的子类
+```
+此时只能写，不能读。同理
+
+只能从中读取的对象为生产者，并称那些你只能写入的对象为消费者。所以泛型协变就是生产者，泛型逆变就是消费者
