密封类的总结理解

--- a/Kotlin/类与对象.md
+++ b/Kotlin/类与对象.md
@@ -10,7 +10,7 @@ class Person constructor(firstName: String) {
 init初始化块中的代码实际上会成为主构造函数的一部分。委托给主构造函数会作为次构造函数的第一条语句，因此所有初始化块与属性初始化器中的代码都会在次构造函数体之前执行。即使该类没有主构造函数，这种委托仍会隐式发生，并且仍会执行初始化块。
 
 ## 访问控制
-Kotlin的类默认不可继承，使用`open`修饰符声明才可以被继承。Kotlin可以通过`sealed`关键字来修饰一个类为密封类，若要继承则需要将子类定义在同一个文件中，其他文件中的类将无法继承它，但是它不能被初始化，因为它是基于抽象类实现。密封类的使用场景有限，可当枚举使用。
+Kotlin的类默认不可继承，使用`open`修饰符声明才可以被继承。Kotlin可以通过`sealed`关键字来修饰一个类为密封类，若要继承则需要将子类定义在同一个文件中，其他文件中的类将无法继承它，但是它不能被初始化，因为它是基于抽象类实现。密封类的使用场景有限，可当枚举使用，但密封类兼具枚举的集合有限性和类的灵活性，比如密封类Result的两个子类Success和Error，子类构造实例每个实例都可以在构造函数传额外信息，也就是说每个Error实例是可以有不同的具体信息。
 |可见性修饰符|含义|
 |----|----|
 |private| 修饰方法和属性只在类内部可见。修饰类，则是Kotlin文件内可见|
