添加泛型笔记

--- a/Java/泛型.md
+++ b/Java/泛型.md
@@ -113,3 +113,14 @@ List<Object> 是 List<? super Number> 的子类
 此时只能写，不能读。同理
 
 只能从中读取的对象为生产者，并称那些你只能写入的对象为消费者。所以泛型协变就是生产者，泛型逆变就是消费者
+
+#### 3.注意点
+泛型静态方法，泛型需要自行定义，无法依赖于类的泛型。例如：
+```
+class MyClass<T>{
+    statc <T> T getData(T t){
+        return t;
+    }
+}
+```
+使用时调用 MyClass.getData("示例")，无法使用MyClass<String>.getData("错误")，因为静态方法的泛型不能访问到类定义的泛型
