提交未完工的修改，待后续更新笔记

--- a/Android/Android架构/组件化和模块化.md
+++ b/Android/Android架构/组件化和模块化.md
@@ -11,6 +11,17 @@
 [一篇文章搞懂Android组件化](https://mp.weixin.qq.com/s/g1XIJ7vPl5yj1_thuV6b9Q)
 [手把手带你 实践组件化](https://mp.weixin.qq.com/s/8_8gGpkpO2QFNkWgSRBwIg)
 
+多模块注意问题：
+[R.java 的生成规则](https://www.wanandroid.com/wenda/show/9067)
+最终打包出来的那些资源id，是会重新分配的（同一个资源生成的id，就算不在同一个R.class里，打包出来时也是相同的）。
+
+一个测试：
+
+app依赖了模块test；test模块中的string.xml有个test_value；在test模块中引用(com.test.R)，看到这个test_value的id值是-1900002；而在app中(com.app.R)引用时，id值为-1900023；这时候可以看出，相同的资源，id确实是不同。打包成apk后，把它拖进AS里，点开classes.dex：首先找到app包名下的R$string，右键查看字节码，发现test_value的id值由原来的-1900023，变成了0x7f10005d；接着找test模块包名下的R$string，查看字节码发现id值一样是0x7f10005d；由此看来，id值在打包成apk的时候，确实是重新分配了，而且同一个资源的id值，也统一了。
+
+[这么多R.java 有卵用呀](https://wanandroid.com/wenda/show/9974)
+[项目中同名资源，会不会覆盖，规则如何](https://www.wanandroid.com/wenda/show/9088)
+
 * 把整个APP按照业务功能拆分成多个组件，每个组件只包含本业务
 * 每个组件可以独立运行
 * 最终，整个APP作为一个壳，由各个组件集成而成
