添加获取OOM限制数据的方式

--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -16,6 +16,17 @@ https://juejin.im/post/6844904099998089230#heading-187
 |PSS|Proportional Set Size|物理内存|PSS=USS+按比例分配的共享库|
 |RSS|Resident Set Size|物理内存|RSS=USS+共享库|
 |VSS|Virtual Set Size|虚拟内存|VSS=RSS+未分配实际物理内存|
+
+### OOM大小限制
+获取当前OOM的限制阈值，可以通过命令或者代码的方式：
+```
+//命令行
+adb shell getprop dalvik.vm.heapgrowthlimit
+
+//代码中
+activityManager.getMemoryClass()
+```
+
 ### dumpsys meminfo
 * `adb shell dumpsys meminfo` 命令可以查看全部进程的内存占用情况
 
