记录查看进程oom_adj的方式

--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -27,6 +27,14 @@ adb shell getprop dalvik.vm.heapgrowthlimit
 activityManager.getMemoryClass()
 ```
 
+### LowMemoryKiller
+当内存较低时，系统会主动杀死进程回收内存，进程的优先级较低时更容易被杀。系统会给进程打分，分越高则进程优先级越低。
+```
+cat /proc/4124/oom_score
+cat /proc/4124/oom_score_adj
+cat /proc/pid/oom_adj
+```
+
 ### dumpsys meminfo
 * `adb shell dumpsys meminfo` 命令可以查看全部进程的内存占用情况
 
